--- a/style.css
+++ b/style.css
@@ -868,3 +868,22 @@ footer .copyright {
 }
 
 
+input[type="text"],
+input[type="email"],
+input[type="password"]{
+    display: block;
+    width: 300px;
+    height: 40px;
+    padding: 20px;
+    border-radius: 5px;
+    background: #fff;
+    border: none;
+    outline: none;
+    margin: 20px 0;
+    text-transform: capitalize;
+    color: #383838;
+    font-size: 14px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.01);
+    font-family: 'Roboto, sans-serif';
+    }
+
